--- a/style.css
+++ b/style.css
@@ -576,5 +576,27 @@ body{
 .contentBx .card .textBx .sci li a:hover{
     background: #2196f3;
 }
-
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Adjust the height as needed */
+    overflow: hidden;
+}
+.footer {
+    width: 100%;
+    height: 16vh;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    line-height: 15vh;
+    z-index: 1;
+}
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the video covers the entire container */
+}
 
