--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ body{
 .video-container {
     position: relative;
     width: 100%;
-    height: 100vh; /* Adjust the height as needed */
+	height: 68vh;
     overflow: hidden;
 }
 .footer {
